# PortfolioGenAI

./: .gitignore  AA-final.ipynb  AA-stepbystep.ipynb  AA.ipynb  NewReport_IBM.txt  PromptExample.txt  README.md  TrainExamples.csv  claims.csv  demo v1-final.ipynb  langchain_helper.py  main.py  pyproject.toml  rag_chromadb_lc_txt.ipynb  requirements.txt
data/: Amazon_scores.csv  NewReport_IBM_generation_prompt.txt  metrics.csv  new_company_scores.csv  new_report_Amazon.txt  new_report_IBM.txt  train_examples - Copy.csv  train_examples.csv
data/faiss_index/: index.faiss  index.pkl
data/vector_dbs/faiss_index/: index.pkl
db/: chroma.sqlite3
src/data_loader/: data_loader.py
src/pgai/: __init__.py  langchain_helper.py
src/pgai/vector_db_clients/: __init__.py  base.py  chroma_client.py  faiss_client.py  pgvector_client.py  pinecone_client.py  vector_db_clients_test.py  weaviate_client.py
