[project]
name = "portfoliogenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langchain-huggingface>=0.3.0",
    "pandas>=2.3.0",
    "sentence-transformers>=4.1.0",
]
