[project]
name = "pgai"
version = "0.1.0"
description = "PortfolioGenAI: Vector DB abstractions and utilities for LLM-powered document retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langchain-huggingface>=0.3.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "sentence-transformers>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
